--- a/tests/test_cases/2021/commands/7E1.22101A.yaml
+++ b/tests/test_cases/2021/commands/7E1.22101A.yaml
@@ -2,6 +2,33 @@ command_id: 7E1.22101A
 can_id_format: ELEVEN_BIT
 extended_addressing_enabled: false
 test_cases:
+- response: 7E90762101A020F0100
+  expected_values:
+    VOLKSWAGEN_ODO_TCM_2: 69378
+- response: 7E90762101A030F0100
+  expected_values:
+    VOLKSWAGEN_ODO_TCM_2: 69379
+- response: 7E90762101A040F0100
+  expected_values:
+    VOLKSWAGEN_ODO_TCM_2: 69380
+- response: 7E90762101A050F0100
+  expected_values:
+    VOLKSWAGEN_ODO_TCM_2: 69381
+- response: 7E90762101A060F0100
+  expected_values:
+    VOLKSWAGEN_ODO_TCM_2: 69382
+- response: 7E90762101A070F0100
+  expected_values:
+    VOLKSWAGEN_ODO_TCM_2: 69383
+- response: 7E90762101A090F0100
+  expected_values:
+    VOLKSWAGEN_ODO_TCM_2: 69385
+- response: 7E90762101A0A0F0100
+  expected_values:
+    VOLKSWAGEN_ODO_TCM_2: 69386
+- response: 7E90762101A0B0F0100
+  expected_values:
+    VOLKSWAGEN_ODO_TCM_2: 69387
 - response: 7E90762101A32070100
   expected_values:
     VOLKSWAGEN_ODO_TCM_2: 67378
@@ -59,3 +86,24 @@ test_cases:
 - response: 7E90762101A630D0100
   expected_values:
     VOLKSWAGEN_ODO_TCM_2: 68963
+- response: 7E90762101AA80E0100
+  expected_values:
+    VOLKSWAGEN_ODO_TCM_2: 69288
+- response: 7E90762101AA90E0100
+  expected_values:
+    VOLKSWAGEN_ODO_TCM_2: 69289
+- response: 7E90762101AAA0E0100
+  expected_values:
+    VOLKSWAGEN_ODO_TCM_2: 69290
+- response: 7E90762101AAB0E0100
+  expected_values:
+    VOLKSWAGEN_ODO_TCM_2: 69291
+- response: 7E90762101AAC0E0100
+  expected_values:
+    VOLKSWAGEN_ODO_TCM_2: 69292
+- response: 7E90762101AAD0E0100
+  expected_values:
+    VOLKSWAGEN_ODO_TCM_2: 69293
+- response: 7E90762101AAE0E0100
+  expected_values:
+    VOLKSWAGEN_ODO_TCM_2: 69294
