--- a/tests/test_cases/2021/commands/7E0.7E8.22F41F.yaml
+++ b/tests/test_cases/2021/commands/7E0.7E8.22F41F.yaml
@@ -2,18 +2,30 @@ command_id: 7E0.7E8.22F41F
 can_id_format: ELEVEN_BIT
 extended_addressing_enabled: false
 test_cases:
+- response: 7E80562F41F0000
+  expected_values:
+    VOLKSWAGEN_RUNTM: 0
+- response: 7E80562F41F0010
+  expected_values:
+    VOLKSWAGEN_RUNTM: 16
 - response: 7E80562F41F0012
   expected_values:
     VOLKSWAGEN_RUNTM: 18
 - response: 7E80562F41F0015
   expected_values:
     VOLKSWAGEN_RUNTM: 21
+- response: 7E80562F41F0017
+  expected_values:
+    VOLKSWAGEN_RUNTM: 23
 - response: 7E80562F41F0018
   expected_values:
     VOLKSWAGEN_RUNTM: 24
 - response: 7E80562F41F001D
   expected_values:
     VOLKSWAGEN_RUNTM: 29
+- response: 7E80562F41F002D
+  expected_values:
+    VOLKSWAGEN_RUNTM: 45
 - response: 7E80562F41F0033
   expected_values:
     VOLKSWAGEN_RUNTM: 51
@@ -26,6 +38,9 @@ test_cases:
 - response: 7E80562F41F0041
   expected_values:
     VOLKSWAGEN_RUNTM: 65
+- response: 7E80562F41F004B
+  expected_values:
+    VOLKSWAGEN_RUNTM: 75
 - response: 7E80562F41F0053
   expected_values:
     VOLKSWAGEN_RUNTM: 83
@@ -35,15 +50,27 @@ test_cases:
 - response: 7E80562F41F005E
   expected_values:
     VOLKSWAGEN_RUNTM: 94
+- response: 7E80562F41F0069
+  expected_values:
+    VOLKSWAGEN_RUNTM: 105
 - response: 7E80562F41F0071
   expected_values:
     VOLKSWAGEN_RUNTM: 113
+- response: 7E80562F41F0072
+  expected_values:
+    VOLKSWAGEN_RUNTM: 114
 - response: 7E80562F41F0078
   expected_values:
     VOLKSWAGEN_RUNTM: 120
 - response: 7E80562F41F007C
   expected_values:
     VOLKSWAGEN_RUNTM: 124
+- response: 7E80562F41F0089
+  expected_values:
+    VOLKSWAGEN_RUNTM: 137
+- response: 7E80562F41F0090
+  expected_values:
+    VOLKSWAGEN_RUNTM: 144
 - response: 7E80562F41F0092
   expected_values:
     VOLKSWAGEN_RUNTM: 146
@@ -53,6 +80,12 @@ test_cases:
 - response: 7E80562F41F009D
   expected_values:
     VOLKSWAGEN_RUNTM: 157
+- response: 7E80562F41F00A7
+  expected_values:
+    VOLKSWAGEN_RUNTM: 167
+- response: 7E80562F41F00AE
+  expected_values:
+    VOLKSWAGEN_RUNTM: 174
 - response: 7E80562F41F00AF
   expected_values:
     VOLKSWAGEN_RUNTM: 175
@@ -62,6 +95,12 @@ test_cases:
 - response: 7E80562F41F00B8
   expected_values:
     VOLKSWAGEN_RUNTM: 184
+- response: 7E80562F41F00C5
+  expected_values:
+    VOLKSWAGEN_RUNTM: 197
+- response: 7E80562F41F00CC
+  expected_values:
+    VOLKSWAGEN_RUNTM: 204
 - response: 7E80562F41F00CD
   expected_values:
     VOLKSWAGEN_RUNTM: 205
@@ -74,12 +113,21 @@ test_cases:
 - response: 7E80562F41F00EB
   expected_values:
     VOLKSWAGEN_RUNTM: 235
+- response: 7E80562F41F00EF
+  expected_values:
+    VOLKSWAGEN_RUNTM: 239
 - response: 7E80562F41F00F2
   expected_values:
     VOLKSWAGEN_RUNTM: 242
 - response: 7E80562F41F0101
   expected_values:
     VOLKSWAGEN_RUNTM: 257
+- response: 7E80562F41F0106
+  expected_values:
+    VOLKSWAGEN_RUNTM: 262
+- response: 7E80562F41F010D
+  expected_values:
+    VOLKSWAGEN_RUNTM: 269
 - response: 7E80562F41F010E
   expected_values:
     VOLKSWAGEN_RUNTM: 270
@@ -89,6 +137,9 @@ test_cases:
 - response: 7E80562F41F011F
   expected_values:
     VOLKSWAGEN_RUNTM: 287
+- response: 7E80562F41F0124
+  expected_values:
+    VOLKSWAGEN_RUNTM: 292
 - response: 7E80562F41F012C
   expected_values:
     VOLKSWAGEN_RUNTM: 300
