--- a/tests/test_cases/2021/commands/7E0.7E8.22F442.yaml
+++ b/tests/test_cases/2021/commands/7E0.7E8.22F442.yaml
@@ -2,12 +2,18 @@ command_id: 7E0.7E8.22F442
 can_id_format: ELEVEN_BIT
 extended_addressing_enabled: false
 test_cases:
+- response: 7E80562F4422EE0
+  expected_values:
+    VOLKSWAGEN_VPWR: 12
 - response: 7E80562F44231C4
   expected_values:
     VOLKSWAGEN_VPWR: 12.74
 - response: 7E80562F442328C
   expected_values:
     VOLKSWAGEN_VPWR: 12.94
+- response: 7E80562F44233CC
+  expected_values:
+    VOLKSWAGEN_VPWR: 13.26
 - response: 7E80562F44233F4
   expected_values:
     VOLKSWAGEN_VPWR: 13.3
@@ -35,6 +41,12 @@ test_cases:
 - response: 7E80562F442391C
   expected_values:
     VOLKSWAGEN_VPWR: 14.62
+- response: 7E80562F442396C
+  expected_values:
+    VOLKSWAGEN_VPWR: 14.7
+- response: 7E80562F4423980
+  expected_values:
+    VOLKSWAGEN_VPWR: 14.72
 - response: 7E80562F44239D0
   expected_values:
     VOLKSWAGEN_VPWR: 14.8
