--- a/tests/test_cases/2021/commands/7E1.7E9.221004.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.221004.yaml
@@ -4,4 +4,4 @@ extended_addressing_enabled: false
 test_cases:
 - response: '7E9056210040000'
   expected_values:
-    VOLKSWAGEN_TIRE_RL_SPD: 0
+    VOLKSWAGEN_TIRE_RL_SPD_V2: 0
