Compress observed commands

--- a/tests/test_cases/2021/commands/7E0.0131.yaml
+++ b/tests/test_cases/2021/commands/7E0.0131.yaml
@@ -5,6 +5,9 @@ test_cases:
 - response: 7E8044131A42C
   expected_values:
     CLR_DIST: 42028
+- response: 7E8044131ABFF
+  expected_values:
+    CLR_DIST: 44031
 - response: 7E8044131AC00
   expected_values:
     CLR_DIST: 44032
