--- a/tests/test_cases/2021/commands/7E0.7E8.22F41F.yaml
+++ b/tests/test_cases/2021/commands/7E0.7E8.22F41F.yaml
@@ -5,6 +5,9 @@ test_cases:
 - response: 7E80562F41F0000
   expected_values:
     VOLKSWAGEN_RUNTM: 0
+- response: 7E80562F41F0101
+  expected_values:
+    VOLKSWAGEN_RUNTM: 257
 - response: 7E80562F41F01F7
   expected_values:
     VOLKSWAGEN_RUNTM: 503
