--- a/tests/test_cases/2021/commands/7E0.7E8.22F431.yaml
+++ b/tests/test_cases/2021/commands/7E0.7E8.22F431.yaml
@@ -5,6 +5,9 @@ test_cases:
 - response: 7E80562F431A42C
   expected_values:
     VOLKSWAGEN_CLR_DIST: 42028
+- response: 7E80562F431ABFF
+  expected_values:
+    VOLKSWAGEN_CLR_DIST: 44031
 - response: 7E80562F431AC00
   expected_values:
     VOLKSWAGEN_CLR_DIST: 44032
