--- a/tests/test_cases/2021/commands/7E0.7E8.22F442.yaml
+++ b/tests/test_cases/2021/commands/7E0.7E8.22F442.yaml
@@ -5,6 +5,12 @@ test_cases:
 - response: 7E80562F4422EE0
   expected_values:
     VOLKSWAGEN_VPWR: 12
-- response: 7E80562F44231C4
+- response: 7E80562F4423408
   expected_values:
-    VOLKSWAGEN_VPWR: 12.74
+    VOLKSWAGEN_VPWR: 13.32
+- response: 7E80562F44239F8
+  expected_values:
+    VOLKSWAGEN_VPWR: 14.84
+- response: 7E80562F4423A0C
+  expected_values:
+    VOLKSWAGEN_VPWR: 14.86
