--- a/tests/test_cases/2021/commands/710.77A.222A0C.yaml
+++ b/tests/test_cases/2021/commands/710.77A.222A0C.yaml
@@ -20,6 +20,9 @@ test_cases:
 - response: 77A04622A0C48
   expected_values:
     VOLKSWAGEN_SSB_SOC: 72
+- response: 77A04622A0C4C
+  expected_values:
+    VOLKSWAGEN_SSB_SOC: 76
 - response: 77A04622A0C64
   expected_values:
     VOLKSWAGEN_SSB_SOC: 100
