--- a/tests/test_cases/2021/commands/710.77A.222A10.yaml
+++ b/tests/test_cases/2021/commands/710.77A.222A10.yaml
@@ -8,6 +8,9 @@ test_cases:
 - response: 77A04622A1022
   expected_values:
     VOLKSWAGEN_SSB_V_REST: 16.2
+- response: 77A04622A1023
+  expected_values:
+    VOLKSWAGEN_SSB_V_REST: 16.41176
 - response: 77A04622A103C
   expected_values:
     VOLKSWAGEN_SSB_V_REST: 21.70588
