Updated command responses

--- a/tests/test_cases/2021/commands/7E0.0131.yaml
+++ b/tests/test_cases/2021/commands/7E0.0131.yaml
@@ -1,6 +1,4 @@
 command_id: 7E0.0131
-can_id_format: ELEVEN_BIT
-extended_addressing_enabled: false
 test_cases:
 - response: 7E8044131A42C
   expected_values:
@@ -11,3 +9,6 @@ test_cases:
 - response: 7E8044131AC00
   expected_values:
     CLR_DIST: 44032
+- response: 7E8044131AD00
+  expected_values:
+    CLR_DIST: 44288
