--- a/tests/test_cases/2021/commands/7E0.0146.yaml
+++ b/tests/test_cases/2021/commands/7E0.0146.yaml
@@ -1,7 +1,8 @@
 command_id: 7E0.0146
-can_id_format: ELEVEN_BIT
-extended_addressing_enabled: false
 test_cases:
+- response: '7E803414635'
+  expected_values:
+    AAT: 13
 - response: 7E80341463A
   expected_values:
     AAT: 18
