--- a/tests/test_cases/2021/commands/7E0.0111.yaml
+++ b/tests/test_cases/2021/commands/7E0.0111.yaml
@@ -1,7 +1,8 @@
 command_id: 7E0.0111
-can_id_format: ELEVEN_BIT
-extended_addressing_enabled: false
 test_cases:
 - response: '7E803411140'
   expected_values:
     TP: 25.09804
+- response: '7E803411143'
+  expected_values:
+    TP: 26.27451
