--- a/tests/test_cases/2021/commands/7E0.014A.yaml
+++ b/tests/test_cases/2021/commands/7E0.014A.yaml
@@ -1,7 +1,8 @@
 command_id: 7E0.014A
-can_id_format: ELEVEN_BIT
-extended_addressing_enabled: false
 test_cases:
 - response: 7E803414A25
   expected_values:
     APP_E: 14.5098
+- response: 7E803414A2A
+  expected_values:
+    APP_E: 16.47059
