--- a/tests/test_cases/2023/command_support.yaml
+++ b/tests/test_cases/2023/command_support.yaml
@@ -1,6 +1,4 @@
 model_year: 2023
-can_id_format: ELEVEN_BIT
-extended_addressing_enabled: false
 supported_commands_by_ecu:
   7E0:
   - 0101:ACRF_RDY,ACRF_SUP,AIR_RDY,AIR_SUP,CAT_RDY,CAT_SUP,CCM_RDY,CCM_SUP,CIM_SUP,DTC_CNT,EGR_RDY,EGR_SUP,EVAP_RDY,EVAP_SUP,FUEL_RDY,FUEL_SUP,HCAT_RDY,HCAT_SUP,HTR_RDY,HTR_SUP,MIL,MIS_RDY,MIS_SUP,O2S_RDY,O2S_SUP
@@ -51,3 +49,111 @@ supported_commands_by_ecu:
   - 0141:ACRFCMPL,ACRF_ENA,AIR_CMPL,AIR_ENA,CAT_CMPL,CAT_ENA,CCM_CMPL,CCM_ENA,CIM_SUP_FLAG,EGR_CMPL,EGR_ENA,EVAPCMPL,EVAP_ENA,FUEL_CMPL,FUEL_ENA,HCATCMPL,HCAT_ENA,HTR_CMPL,HTR_ENA,MIS_CMPL,MIS_ENA,O2S_CMPL,O2S_ENA
   - 0142:VPWR
   - 0149:APP_D
+unsupported_commands_by_ecu:
+  70B:
+  - 70B.2218A0
+  - 70B.2218A1
+  - 70B.2218A2
+  - 70B.2218A3
+  710:
+  - 710.222A0A
+  - 710.77A.222AB2
+  - 710.77A.222AB6
+  - 710.77A.222AB7
+  - 710.77A.222AB8
+  713:
+  - '713.221800'
+  - '713.221801'
+  - '713.221802'
+  - '713.221803'
+  - 713.77D.222B1B
+  - 713.77D.222B1C
+  - 713.77D.222B1D
+  - 713.77D.222B1E
+  - 713.77D.222B29
+  714:
+  - '714.221014'
+  - 714.22202F
+  - '714.222203'
+  - '714.222294'
+  - 714.22229A
+  - 714.2222B0
+  - '714.222613'
+  - 714.77E.220530
+  - 714.77E.2222E0
+  715:
+  - '715.222353'
+  - '715.222354'
+  - '715.222355'
+  - '715.222356'
+  - '715.222357'
+  744:
+  - 744.7AE.224965
+  746:
+  - 746.2227C4
+  7E0:
+  - 7E0.2211C4
+  - 7E0.2211C5
+  - 7E0.22295A
+  - 7E0.7E8.2208D2
+  - 7E0.7E8.221153
+  - 7E0.7E8.221154
+  - 7E0.7E8.221155
+  - 7E0.7E8.221156
+  - 7E0.7E8.221164
+  - 7E0.7E8.222005
+  - 7E0.7E8.222061
+  - 7E0.7E8.222062
+  7E1:
+  - 7E1.220302
+  - 7E1.220303
+  - 7E1.220304
+  - 7E1.220305
+  - 7E1.222B1B
+  - 7E1.222B1C
+  - 7E1.222B1D
+  - 7E1.222B1E
+  - 7E1.7E9.220805
+  - 7E1.7E9.22210F
+  7E5:
+  - 7E5.7ED.22028C
+  - 7E5.7ED.221801
+  - 7E5.7ED.221850
+  - 7E5.7ED.221851
+  - 7E5.7ED.221852
+  - 7E5.7ED.221853
+  - 7E5.7ED.221854
+  - 7E5.7ED.221855
+  - 7E5.7ED.221856
+  - 7E5.7ED.221857
+  - 7E5.7ED.221858
+  - 7E5.7ED.221859
+  - 7E5.7ED.22185A
+  - 7E5.7ED.22185B
+  - 7E5.7ED.22185C
+  - 7E5.7ED.22185D
+  - 7E5.7ED.22185E
+  - 7E5.7ED.22185F
+  - 7E5.7ED.221860
+  - 7E5.7ED.221861
+  - 7E5.7ED.221862
+  - 7E5.7ED.221863
+  - 7E5.7ED.221864
+  - 7E5.7ED.221865
+  - 7E5.7ED.221866
+  - 7E5.7ED.221867
+  - 7E5.7ED.221868
+  - 7E5.7ED.221869
+  - 7E5.7ED.22186A
+  - 7E5.7ED.22186B
+  - 7E5.7ED.22186C
+  - 7E5.7ED.22186D
+  - 7E5.7ED.22186E
+  - 7E5.7ED.22186F
+  - 7E5.7ED.221E32
+  - 7E5.7ED.221E3B
+  - 7E5.7ED.221E3D
+  - 7E5.7ED.2251E0
+  - 7E5.7ED.225200
+  FC00:
+  - FC00.22028C
