--- a/tests/test_cases/2021/command_support.yaml
+++ b/tests/test_cases/2021/command_support.yaml
@@ -1,5 +1,12 @@
 model_year: 2021
 supported_commands_by_ecu:
+  710:
+  - 710.77A.222A07:VOLKSWAGEN_SSB_V
+  - 710.77A.222A0B:VOLKSWAGEN_SSB_T
+  - 710.77A.222A0C:VOLKSWAGEN_SSB_SOC
+  - 710.77A.222A0E:VOLKSWAGEN_SSB_R
+  - 710.77A.222A0F:VOLKSWAGEN_SSB_AH
+  - 710.77A.222A10:VOLKSWAGEN_SSB_V_REST
   7E0:
   - 0101:ACRF_RDY,ACRF_SUP,AIR_RDY,AIR_SUP,CAT_RDY,CAT_SUP,CCM_RDY,CCM_SUP,CIM_SUP,DTC_CNT,EGR_RDY,EGR_SUP,EVAP_RDY,EVAP_SUP,FUEL_RDY,FUEL_SUP,HCAT_RDY,HCAT_SUP,HTR_RDY,HTR_SUP,MIL,MIS_RDY,MIS_SUP,O2S_RDY,O2S_SUP
   - 0104:LOAD_PCT
@@ -39,6 +46,43 @@ supported_commands_by_ecu:
   - 019D:FUEL_RATE_ALT,VFUEL_RATE
   - 019E:EXH_RATE
   - 01A6:ODO
+  - 7E0.0101:ACRF_RDY,ACRF_SUP,AIR_RDY,AIR_SUP,CAT_RDY,CAT_SUP,CCM_RDY,CCM_SUP,CIM_SUP,DTC_CNT,EGR_RDY,EGR_SUP,EVAP_RDY,EVAP_SUP,FUEL_RDY,FUEL_SUP,HCAT_RDY,HCAT_SUP,HTR_RDY,HTR_SUP,MIL,MIS_RDY,MIS_SUP,O2S_RDY,O2S_SUP
+  - 7E0.0104:LOAD_PCT
+  - 7E0.0105:ECT
+  - 7E0.010B:MAP
+  - 7E0.010C:RPM
+  - 7E0.010D:VSS
+  - 7E0.010F:IAT
+  - 7E0.0110:MAF
+  - 7E0.0111:TP
+  - 7E0.0113:O2S11_EXISTS,O2S12_EXISTS,O2S13_EXISTS,O2S14_EXISTS,O2S21_EXISTS,O2S22_EXISTS,O2S23_EXISTS,O2S24_EXISTS
+  - 7E0.011C:OBDSUP
+  - 7E0.011F:RUNTM
+  - 7E0.0121:MIL_DIST
+  - 7E0.0123:FRP
+  - 7E0.0130:WARM_UPS
+  - 7E0.0131:CLR_DIST
+  - 7E0.0133:BARO
+  - 7E0.0142:VPWR
+  - 7E0.0145:TP_R
+  - 7E0.0146:AAT
+  - 7E0.0149:APP_D
+  - 7E0.014A:APP_E
+  - 7E0.014C:TAC_PCT
+  - 7E0.014F:MAX_EQ_RAT,MAX_MAP,MAX_O2_CURR,MAX_O2_VOLT
+  - 7E0.0167:ECT_1,ECT_1_SUP,ECT_2,ECT_2_SUP
+  - 7E0.0169:EGR_A_ACT,EGR_A_ACT_SUP,EGR_A_CMD,EGR_A_CMD_SUP,EGR_A_ERR,EGR_A_ERR_SUP,EGR_B_ACT,EGR_B_ACT_SUP,EGR_B_CMD,EGR_B_CMD_SUP,EGR_B_ERR,EGR_B_ERR_SUP
+  - 7E0.2211C4:VOLKSWAGEN_OIL_MAX
+  - 7E0.2211C5:VOLKSWAGEN_OIL_MIN
+  - 7E0.7E8.221151:VOLKSWAGEN_EM_RPM_1
+  - 7E0.7E8.221153:VOLKSWAGEN_EM_TORQ_1
+  - 7E0.7E8.2211BE:VOLKSWAGEN_EOT_V2
+  - 7E0.7E8.22F40D:VOLKSWAGEN_VSS
+  - 7E0.7E8.22F41F:VOLKSWAGEN_RUNTM
+  - 7E0.7E8.22F421:VOLKSWAGEN_MIL_DIST
+  - 7E0.7E8.22F430:VOLKSWAGEN_WARM_UPS
+  - 7E0.7E8.22F431:VOLKSWAGEN_CLR_DIST
+  - 7E0.7E8.22F442:VOLKSWAGEN_VPWR
   7E1:
   - 0101:ACRF_RDY,ACRF_SUP,AIR_RDY,AIR_SUP,CAT_RDY,CAT_SUP,CCM_RDY,CCM_SUP,CIM_SUP,DTC_CNT,EGR_RDY,EGR_SUP,EVAP_RDY,EVAP_SUP,FUEL_RDY,FUEL_SUP,HCAT_RDY,HCAT_SUP,HTR_RDY,HTR_SUP,MIL,MIS_RDY,MIS_SUP,O2S_RDY,O2S_SUP
   - 0104:LOAD_PCT
@@ -48,6 +92,12 @@ supported_commands_by_ecu:
   - 0141:ACRFCMPL,ACRF_ENA,AIR_CMPL,AIR_ENA,CAT_CMPL,CAT_ENA,CCM_CMPL,CCM_ENA,CIM_SUP_FLAG,EGR_CMPL,EGR_ENA,EVAPCMPL,EVAP_ENA,FUEL_CMPL,FUEL_ENA,HCATCMPL,HCAT_ENA,HTR_CMPL,HTR_ENA,MIS_CMPL,MIS_ENA,O2S_CMPL,O2S_ENA
   - 0142:VPWR
   - 0149:APP_D
+  - 7E1.22101A:VOLKSWAGEN_ODO_TCM_2
+  - 7E1.223841:VOLKSWAGEN_ODO_TCM_1
+  - 7E1.223887:VOLKSWAGEN_ODO_TCM_2_HD
+  - 7E1.7E9.0141
+  - 7E1.7E9.221001:VOLKSWAGEN_TIRE_FR_SPD_V2
+  - 7E1.7E9.221004:VOLKSWAGEN_TIRE_RL_SPD_V2
 unsupported_commands_by_ecu:
   70B:
   - 70B.2218A0|fc=1:VOLKSWAGEN_TID_1,VOLKSWAGEN_TPOS_1,VOLKSWAGEN_TPS_1,VOLKSWAGEN_TPW_1,VOLKSWAGEN_TP_1,VOLKSWAGEN_TP_FR,VOLKSWAGEN_TT_1
