--- a/tests/test_cases/2023/command_support.yaml
+++ b/tests/test_cases/2023/command_support.yaml
@@ -1,5 +1,12 @@
 model_year: 2023
 supported_commands_by_ecu:
+  710:
+  - 710.77A.222A07:VOLKSWAGEN_SSB_V
+  - 710.77A.222A0B:VOLKSWAGEN_SSB_T
+  - 710.77A.222A0C:VOLKSWAGEN_SSB_SOC
+  - 710.77A.222A0E:VOLKSWAGEN_SSB_R
+  - 710.77A.222A0F:VOLKSWAGEN_SSB_AH
+  - 710.77A.222A10:VOLKSWAGEN_SSB_V_REST
   7E0:
   - 0101:ACRF_RDY,ACRF_SUP,AIR_RDY,AIR_SUP,CAT_RDY,CAT_SUP,CCM_RDY,CCM_SUP,CIM_SUP,DTC_CNT,EGR_RDY,EGR_SUP,EVAP_RDY,EVAP_SUP,FUEL_RDY,FUEL_SUP,HCAT_RDY,HCAT_SUP,HTR_RDY,HTR_SUP,MIL,MIS_RDY,MIS_SUP,O2S_RDY,O2S_SUP
   - 0103:FUELSYS1,FUELSYS2
@@ -40,6 +47,28 @@ supported_commands_by_ecu:
   - 0156:LGSO2FT1
   - 0167:ECT_1,ECT_1_SUP,ECT_2,ECT_2_SUP
   - 0170:BP_A,BP_A_ACT,BP_A_ACT_SUP,BP_A_CMD,BP_A_CMD_SUP,BP_A_SUP,BP_B,BP_B_ACT,BP_B_ACT_SUP,BP_B_CMD,BP_B_CMD_SUP,BP_B_SUP
+  - 7E0.010D:VSS
+  - 7E0.012F:FLI
+  - 7E0.0131:CLR_DIST
+  - 7E0.0142:VPWR
+  - 7E0.2210E0:VOLKSWAGEN_ODO_2_V3,VOLKSWAGEN_ODO_V3
+  - 7E0.221160:VOLKSWAGEN_ODO_2_V4,VOLKSWAGEN_ODO_HD
+  - 7E0.2211BA:VOLKSWAGEN_OIL_LEVEL
+  - 7E0.2211BB:VOLKSWAGEN_OIL_CRIT
+  - 7E0.7E8.22028D:VOLKSWAGEN_ECU_TEMP
+  - 7E0.7E8.221004:VOLKSWAGEN_AAT_V2
+  - 7E0.7E8.221151:VOLKSWAGEN_EM_RPM_1
+  - 7E0.7E8.221152:VOLKSWAGEN_EM_RPM_2
+  - 7E0.7E8.221158:VOLKSWAGEN_MAX_DCHA_CUR_2
+  - 7E0.7E8.221159:VOLKSWAGEN_MAX_CHA_CUR_2
+  - 7E0.7E8.2211BD:VOLKSWAGEN_OIL_LEVEL_WARN
+  - 7E0.7E8.2211BE:VOLKSWAGEN_EOT_V2
+  - 7E0.7E8.22F40D:VOLKSWAGEN_VSS
+  - 7E0.7E8.22F41F:VOLKSWAGEN_RUNTM
+  - 7E0.7E8.22F421:VOLKSWAGEN_MIL_DIST
+  - 7E0.7E8.22F430:VOLKSWAGEN_WARM_UPS
+  - 7E0.7E8.22F431:VOLKSWAGEN_CLR_DIST
+  - 7E0.7E8.22F442:VOLKSWAGEN_VPWR
   7E1:
   - 0101:ACRF_RDY,ACRF_SUP,AIR_RDY,AIR_SUP,CAT_RDY,CAT_SUP,CCM_RDY,CCM_SUP,CIM_SUP,DTC_CNT,EGR_RDY,EGR_SUP,EVAP_RDY,EVAP_SUP,FUEL_RDY,FUEL_SUP,HCAT_RDY,HCAT_SUP,HTR_RDY,HTR_SUP,MIL,MIS_RDY,MIS_SUP,O2S_RDY,O2S_SUP
   - 0104:LOAD_PCT
@@ -49,6 +78,11 @@ supported_commands_by_ecu:
   - 0141:ACRFCMPL,ACRF_ENA,AIR_CMPL,AIR_ENA,CAT_CMPL,CAT_ENA,CCM_CMPL,CCM_ENA,CIM_SUP_FLAG,EGR_CMPL,EGR_ENA,EVAPCMPL,EVAP_ENA,FUEL_CMPL,FUEL_ENA,HCATCMPL,HCAT_ENA,HTR_CMPL,HTR_ENA,MIS_CMPL,MIS_ENA,O2S_CMPL,O2S_ENA
   - 0142:VPWR
   - 0149:APP_D
+  - 7E1.22101A:VOLKSWAGEN_ODO_TCM_2
+  - 7E1.223841:VOLKSWAGEN_ODO_TCM_1
+  - 7E1.223887:VOLKSWAGEN_ODO_TCM_2_HD
+  - 7E1.7E9.221001:VOLKSWAGEN_TIRE_FR_SPD_V2
+  - 7E1.7E9.221004:VOLKSWAGEN_TIRE_RL_SPD_V2
 unsupported_commands_by_ecu:
   70B:
   - 70B.2218A0|fc=1:VOLKSWAGEN_TID_1,VOLKSWAGEN_TPOS_1,VOLKSWAGEN_TPS_1,VOLKSWAGEN_TPW_1,VOLKSWAGEN_TP_1,VOLKSWAGEN_TP_FR,VOLKSWAGEN_TT_1
