--- a/tests/test_cases/2021/commands/710.77A.222A0E.yaml
+++ b/tests/test_cases/2021/commands/710.77A.222A0E.yaml
@@ -9,3 +9,6 @@ test_cases:
 - response: 77A04622A0E1B
   expected_values:
     VOLKSWAGEN_SSB_R: 5.4
+- response: 77A04622A0EFF
+  expected_values:
+    VOLKSWAGEN_SSB_R: 51
