--- a/tests/test_cases/2021/commands/710.77A.222A10.yaml
+++ b/tests/test_cases/2021/commands/710.77A.222A10.yaml
@@ -1,5 +1,8 @@
 command_id: 710.77A.222A10
 test_cases:
+- response: 77A04622A1000
+  expected_values:
+    VOLKSWAGEN_SSB_V_REST: 9
 - response: 77A04622A1021
   expected_values:
     VOLKSWAGEN_SSB_V_REST: 15.98824
