Updated command responses

--- a/tests/test_cases/2021/commands/710.77A.222A0F.yaml
+++ b/tests/test_cases/2021/commands/710.77A.222A0F.yaml
@@ -1,8 +1,8 @@
 command_id: 710.77A.222A0F
 test_cases:
-- response: 77A04622A0F23
-  expected_values:
+- expected_values:
     VOLKSWAGEN_SSB_AH: 35
-- response: 77A04622A0F64
-  expected_values:
+  response: 77A04622A0F23
+- expected_values:
     VOLKSWAGEN_SSB_AH: 100
+  response: 77A04622A0F64
