--- a/tests/test_cases/2021/commands/7E0.0104.yaml
+++ b/tests/test_cases/2021/commands/7E0.0104.yaml
@@ -1,8 +1,8 @@
 command_id: 7E0.0104
 test_cases:
-- response: 7E80341043B
-  expected_values:
+- expected_values:
     LOAD_PCT: 23.13725
-- response: 7E80341044B
-  expected_values:
+  response: 7E80341043B
+- expected_values:
     LOAD_PCT: 29.41176
+  response: 7E80341044B
