--- a/tests/test_cases/2021/commands/7E0.0110.yaml
+++ b/tests/test_cases/2021/commands/7E0.0110.yaml
@@ -1,8 +1,8 @@
 command_id: 7E0.0110
 test_cases:
-- response: 7E8044110032D
-  expected_values:
+- expected_values:
     MAF: 8.13
-- response: 7E804411004C6
-  expected_values:
+  response: 7E8044110032D
+- expected_values:
     MAF: 12.22
+  response: 7E804411004C6
