--- a/tests/test_cases/2021/commands/7E0.0123.yaml
+++ b/tests/test_cases/2021/commands/7E0.0123.yaml
@@ -1,8 +1,8 @@
 command_id: 7E0.0123
 test_cases:
-- response: 7E80441230AFD
-  expected_values:
+- expected_values:
     FRP: 28130
-- response: 7E80441230E5A
-  expected_values:
+  response: 7E80441230AFD
+- expected_values:
     FRP: 36740
+  response: 7E80441230E5A
