--- a/tests/test_cases/2021/commands/7E0.0149.yaml
+++ b/tests/test_cases/2021/commands/7E0.0149.yaml
@@ -1,8 +1,8 @@
 command_id: 7E0.0149
 test_cases:
-- response: '7E803414924'
-  expected_values:
+- expected_values:
     APP_D: 14.11765
-- response: 7E80341492B
-  expected_values:
+  response: '7E803414924'
+- expected_values:
     APP_D: 16.86275
+  response: 7E80341492B
