--- a/tests/test_cases/2021/commands/7E0.0169.yaml
+++ b/tests/test_cases/2021/commands/7E0.0169.yaml
@@ -1,9 +1,6 @@
 command_id: 7E0.0169
 test_cases:
-- response: |-
-    7E8100941693F000080
-    7E8213D3D8055555555
-  expected_values:
+- expected_values:
     EGR_A_ACT: 0
     EGR_A_ACT_SUP: 1
     EGR_A_CMD: 0
@@ -16,10 +13,10 @@ test_cases:
     EGR_B_CMD_SUP: 1
     EGR_B_ERR: 0
     EGR_B_ERR_SUP: 1
-- response: |-
+  response: |-
     7E8100941693F000080
-    7E82149477D55555555
-  expected_values:
+    7E8213D3D8055555555
+- expected_values:
     EGR_A_ACT: 0
     EGR_A_ACT_SUP: 1
     EGR_A_CMD: 0
@@ -32,3 +29,6 @@ test_cases:
     EGR_B_CMD_SUP: 1
     EGR_B_ERR: -2.34375
     EGR_B_ERR_SUP: 1
+  response: |-
+    7E8100941693F000080
+    7E82149477D55555555
