--- a/tests/test_cases/2021/commands/7E0.2211C5.yaml
+++ b/tests/test_cases/2021/commands/7E0.2211C5.yaml
@@ -1,5 +1,8 @@
 command_id: 7E0.2211C5
 test_cases:
-- response: 7E8056211C51269
-  expected_values:
+- expected_values:
+    VOLKSWAGEN_OIL_MIN: 18.24
+  response: 7E8056211C511D0
+- expected_values:
     VOLKSWAGEN_OIL_MIN: 18.852
+  response: 7E8056211C51269
