--- a/tests/test_cases/2023/commands/7E0.7E8.221151.yaml
+++ b/tests/test_cases/2023/commands/7E0.7E8.221151.yaml
@@ -1,5 +1,5 @@
 command_id: 7E0.7E8.221151
 test_cases:
-- response: '7E8056211510677'
-  expected_values:
+- expected_values:
     VOLKSWAGEN_EM_RPM_1: 100
+  response: '7E8056211510677'
