--- a/tests/test_cases/2021/commands/710.77A.222A0B.yaml
+++ b/tests/test_cases/2021/commands/710.77A.222A0B.yaml
@@ -1,8 +1,8 @@
 command_id: 710.77A.222A0B
 test_cases:
-- response: 77A04622A0B00
-  expected_values:
+- expected_values:
     VOLKSWAGEN_SSB_T: -40
-- response: 77A04622A0B52
-  expected_values:
+  response: 77A04622A0B00
+- expected_values:
     VOLKSWAGEN_SSB_T: 42
+  response: 77A04622A0B52
