--- a/tests/test_cases/2021/commands/710.77A.222A0E.yaml
+++ b/tests/test_cases/2021/commands/710.77A.222A0E.yaml
@@ -1,14 +1,14 @@
 command_id: 710.77A.222A0E
 test_cases:
-- response: 77A04622A0E19
-  expected_values:
+- expected_values:
     VOLKSWAGEN_SSB_R: 5
-- response: 77A04622A0E1A
-  expected_values:
+  response: 77A04622A0E19
+- expected_values:
     VOLKSWAGEN_SSB_R: 5.2
-- response: 77A04622A0E1B
-  expected_values:
+  response: 77A04622A0E1A
+- expected_values:
     VOLKSWAGEN_SSB_R: 5.4
-- response: 77A04622A0EFF
-  expected_values:
+  response: 77A04622A0E1B
+- expected_values:
     VOLKSWAGEN_SSB_R: 51
+  response: 77A04622A0EFF
