--- a/tests/test_cases/2021/commands/710.77A.222A10.yaml
+++ b/tests/test_cases/2021/commands/710.77A.222A10.yaml
@@ -1,17 +1,17 @@
 command_id: 710.77A.222A10
 test_cases:
-- response: 77A04622A1000
-  expected_values:
+- expected_values:
     VOLKSWAGEN_SSB_V_REST: 9
-- response: 77A04622A1021
-  expected_values:
+  response: 77A04622A1000
+- expected_values:
     VOLKSWAGEN_SSB_V_REST: 15.98824
-- response: 77A04622A1022
-  expected_values:
+  response: 77A04622A1021
+- expected_values:
     VOLKSWAGEN_SSB_V_REST: 16.2
-- response: 77A04622A1023
-  expected_values:
+  response: 77A04622A1022
+- expected_values:
     VOLKSWAGEN_SSB_V_REST: 16.41176
-- response: 77A04622A103C
-  expected_values:
+  response: 77A04622A1023
+- expected_values:
     VOLKSWAGEN_SSB_V_REST: 21.70588
+  response: 77A04622A103C
