--- a/tests/test_cases/2021/commands/7E0.0105.yaml
+++ b/tests/test_cases/2021/commands/7E0.0105.yaml
@@ -1,8 +1,8 @@
 command_id: 7E0.0105
 test_cases:
-- response: '7E803410581'
-  expected_values:
+- expected_values:
     ECT: 89
-- response: 7E80341058C
-  expected_values:
+  response: '7E803410581'
+- expected_values:
     ECT: 100
+  response: 7E80341058C
