--- a/tests/test_cases/2021/commands/7E0.010D.yaml
+++ b/tests/test_cases/2021/commands/7E0.010D.yaml
@@ -1,8 +1,8 @@
 command_id: 7E0.010D
 test_cases:
-- response: 7E803410D00
-  expected_values:
+- expected_values:
     VSS: 0
-- response: 7E803410D7E
-  expected_values:
-    VSS: 126
+  response: 7E803410D00
+- expected_values:
+    VSS: 167
+  response: 7E803410DA7
