--- a/tests/test_cases/2021/commands/7E0.010F.yaml
+++ b/tests/test_cases/2021/commands/7E0.010F.yaml
@@ -1,8 +1,8 @@
 command_id: 7E0.010F
 test_cases:
-- response: 7E803410F4A
-  expected_values:
+- expected_values:
     IAT: 34
-- response: 7E803410F71
-  expected_values:
+  response: 7E803410F4A
+- expected_values:
     IAT: 73
+  response: 7E803410F71
