--- a/tests/test_cases/2021/commands/7E0.011F.yaml
+++ b/tests/test_cases/2021/commands/7E0.011F.yaml
@@ -1,5 +1,5 @@
 command_id: 7E0.011F
 test_cases:
-- response: 7E804411F0315
-  expected_values:
+- expected_values:
     RUNTM: 789
+  response: 7E804411F0315
