--- a/tests/test_cases/2021/commands/7E0.0131.yaml
+++ b/tests/test_cases/2021/commands/7E0.0131.yaml
@@ -1,14 +1,14 @@
 command_id: 7E0.0131
 test_cases:
-- response: 7E8044131A42C
-  expected_values:
+- expected_values:
     CLR_DIST: 42028
-- response: 7E8044131ABFF
-  expected_values:
+  response: 7E8044131A42C
+- expected_values:
     CLR_DIST: 44031
-- response: 7E8044131AC00
-  expected_values:
+  response: 7E8044131ABFF
+- expected_values:
     CLR_DIST: 44032
-- response: 7E8044131AE31
-  expected_values:
-    CLR_DIST: 44593
+  response: 7E8044131AC00
+- expected_values:
+    CLR_DIST: 45883
+  response: 7E8044131B33B
