--- a/tests/test_cases/2021/commands/7E0.0145.yaml
+++ b/tests/test_cases/2021/commands/7E0.0145.yaml
@@ -1,8 +1,8 @@
 command_id: 7E0.0145
 test_cases:
-- response: '7E803414529'
-  expected_values:
+- expected_values:
     TP_R: 16.07843
-- response: 7E80341452D
-  expected_values:
+  response: '7E803414529'
+- expected_values:
     TP_R: 17.64706
+  response: 7E80341452D
