--- a/tests/test_cases/2021/commands/7E0.0167.yaml
+++ b/tests/test_cases/2021/commands/7E0.0167.yaml
@@ -1,14 +1,14 @@
 command_id: 7E0.0167
 test_cases:
-- response: '7E8054167018100'
-  expected_values:
+- expected_values:
     ECT_1: 89
     ECT_1_SUP: 1
     ECT_2: -40
     ECT_2_SUP: 0
-- response: 7E8054167018D00
-  expected_values:
+  response: '7E8054167018100'
+- expected_values:
     ECT_1: 101
     ECT_1_SUP: 1
     ECT_2: -40
     ECT_2_SUP: 0
+  response: 7E8054167018D00
