--- a/tests/test_cases/2021/commands/7E0.7E8.22F430.yaml
+++ b/tests/test_cases/2021/commands/7E0.7E8.22F430.yaml
@@ -1,5 +1,5 @@
 command_id: 7E0.7E8.22F430
 test_cases:
-- response: 7E80462F430FF
-  expected_values:
+- expected_values:
     VOLKSWAGEN_WARM_UPS: 255
+  response: 7E80462F430FF
