--- a/tests/test_cases/2021/commands/7E1.223841.yaml
+++ b/tests/test_cases/2021/commands/7E1.223841.yaml
@@ -1,14 +1,14 @@
 command_id: 7E1.223841
 test_cases:
-- response: 7E90762384100950A00
-  expected_values:
+- expected_values:
     VOLKSWAGEN_ODO_TCM_1: 693504
-- response: 7E90762384100A60A00
-  expected_values:
-    VOLKSWAGEN_ODO_TCM_1: 697856
-- response: 7E9076238417D3E0A00
-  expected_values:
+  response: 7E90762384100950A00
+- expected_values:
     VOLKSWAGEN_ODO_TCM_1: 671357
-- response: 7E907623841FF980A00
-  expected_values:
+  response: 7E9076238417D3E0A00
+- expected_values:
+    VOLKSWAGEN_ODO_TCM_1: 709884
+  response: 7E907623841FCD40A00
+- expected_values:
     VOLKSWAGEN_ODO_TCM_1: 694527
+  response: 7E907623841FF980A00
