--- a/tests/test_cases/2021/commands/7E1.7E9.221004.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.221004.yaml
@@ -1,5 +1,5 @@
 command_id: 7E1.7E9.221004
 test_cases:
-- response: '7E9056210040000'
-  expected_values:
+- expected_values:
     VOLKSWAGEN_TIRE_RL_SPD_V2: 0
+  response: '7E9056210040000'
