--- a/tests/test_cases/2023/commands/710.77A.222A07.yaml
+++ b/tests/test_cases/2023/commands/710.77A.222A07.yaml
@@ -1,11 +1,11 @@
 command_id: 710.77A.222A07
 test_cases:
-- response: 77A05622A07278A
-  expected_values:
+- expected_values:
     VOLKSWAGEN_SSB_V: 69.54
-- response: 77A05622A0727F7
-  expected_values:
+  response: 77A05622A07278A
+- expected_values:
     VOLKSWAGEN_SSB_V: 69.54
-- response: 77A05622A07281A
-  expected_values:
+  response: 77A05622A0727F7
+- expected_values:
     VOLKSWAGEN_SSB_V: 69.54
+  response: 77A05622A07281A
