--- a/tests/test_cases/2023/commands/710.77A.222A0B.yaml
+++ b/tests/test_cases/2023/commands/710.77A.222A0B.yaml
@@ -1,5 +1,5 @@
 command_id: 710.77A.222A0B
 test_cases:
-- response: 77A04622A0B48
-  expected_values:
+- expected_values:
     VOLKSWAGEN_SSB_T: 32
+  response: 77A04622A0B48
