--- a/tests/test_cases/2023/commands/710.77A.222A0E.yaml
+++ b/tests/test_cases/2023/commands/710.77A.222A0E.yaml
@@ -1,5 +1,5 @@
 command_id: 710.77A.222A0E
 test_cases:
-- response: 77A04622A0E1A
-  expected_values:
+- expected_values:
     VOLKSWAGEN_SSB_R: 5.2
+  response: 77A04622A0E1A
