--- a/tests/test_cases/2023/commands/710.77A.222A0F.yaml
+++ b/tests/test_cases/2023/commands/710.77A.222A0F.yaml
@@ -1,5 +1,5 @@
 command_id: 710.77A.222A0F
 test_cases:
-- response: 77A04622A0F18
-  expected_values:
+- expected_values:
     VOLKSWAGEN_SSB_AH: 24
+  response: 77A04622A0F18
