--- a/tests/test_cases/2023/commands/710.77A.222A10.yaml
+++ b/tests/test_cases/2023/commands/710.77A.222A10.yaml
@@ -1,5 +1,5 @@
 command_id: 710.77A.222A10
 test_cases:
-- response: 77A04622A1020
-  expected_values:
+- expected_values:
     VOLKSWAGEN_SSB_V_REST: 15.77647
+  response: 77A04622A1020
