--- a/tests/test_cases/2023/commands/7E0.0131.yaml
+++ b/tests/test_cases/2023/commands/7E0.0131.yaml
@@ -1,5 +1,5 @@
 command_id: 7E0.0131
 test_cases:
-- response: '7E80441310597'
-  expected_values:
+- expected_values:
     CLR_DIST: 1431
+  response: '7E80441310597'
