--- a/tests/test_cases/2023/commands/7E0.0142.yaml
+++ b/tests/test_cases/2023/commands/7E0.0142.yaml
@@ -1,8 +1,8 @@
 command_id: 7E0.0142
 test_cases:
-- response: 7E804414236EC
-  expected_values:
+- expected_values:
     VPWR: 14.06
-- response: '7E80441423714'
-  expected_values:
+  response: 7E804414236EC
+- expected_values:
     VPWR: 14.1
+  response: '7E80441423714'
