--- a/tests/test_cases/2023/commands/7E0.7E8.22028D.yaml
+++ b/tests/test_cases/2023/commands/7E0.7E8.22028D.yaml
@@ -1,26 +1,26 @@
 command_id: 7E0.7E8.22028D
 test_cases:
-- response: 7E80562028D0C22
-  expected_values:
+- expected_values:
     VOLKSWAGEN_ECU_TEMP: 310.6
-- response: 7E80562028D0C25
-  expected_values:
+  response: 7E80562028D0C22
+- expected_values:
     VOLKSWAGEN_ECU_TEMP: 310.9
-- response: 7E80562028D0C2B
-  expected_values:
+  response: 7E80562028D0C25
+- expected_values:
     VOLKSWAGEN_ECU_TEMP: 311.5
-- response: 7E80562028D0C2C
-  expected_values:
+  response: 7E80562028D0C2B
+- expected_values:
     VOLKSWAGEN_ECU_TEMP: 311.6
-- response: 7E80562028D0C33
-  expected_values:
+  response: 7E80562028D0C2C
+- expected_values:
     VOLKSWAGEN_ECU_TEMP: 312.3
-- response: 7E80562028D0C38
-  expected_values:
+  response: 7E80562028D0C33
+- expected_values:
     VOLKSWAGEN_ECU_TEMP: 312.8
-- response: 7E80562028D0C3B
-  expected_values:
+  response: 7E80562028D0C38
+- expected_values:
     VOLKSWAGEN_ECU_TEMP: 313.1
-- response: 7E80562028D0C42
-  expected_values:
+  response: 7E80562028D0C3B
+- expected_values:
     VOLKSWAGEN_ECU_TEMP: 313.8
+  response: 7E80562028D0C42
