--- a/tests/test_cases/2023/commands/7E0.7E8.221152.yaml
+++ b/tests/test_cases/2023/commands/7E0.7E8.221152.yaml
@@ -1,5 +1,5 @@
 command_id: 7E0.7E8.221152
 test_cases:
-- response: 7E8056211520C80
-  expected_values:
+- expected_values:
     VOLKSWAGEN_EM_RPM_2: 100
+  response: 7E8056211520C80
