--- a/tests/test_cases/2023/commands/7E0.7E8.221158.yaml
+++ b/tests/test_cases/2023/commands/7E0.7E8.221158.yaml
@@ -1,5 +1,5 @@
 command_id: 7E0.7E8.221158
 test_cases:
-- response: '7E8056211580000'
-  expected_values:
+- expected_values:
     VOLKSWAGEN_MAX_DCHA_CUR_2: 0
+  response: '7E8056211580000'
