--- a/tests/test_cases/2023/commands/7E0.7E8.2211BD.yaml
+++ b/tests/test_cases/2023/commands/7E0.7E8.2211BD.yaml
@@ -1,26 +1,26 @@
 command_id: 7E0.7E8.2211BD
 test_cases:
-- response: 7E8056211BD0DC3
-  expected_values:
+- expected_values:
     VOLKSWAGEN_OIL_LEVEL_WARN: 1.4092
-- response: 7E8056211BD0DD8
-  expected_values:
+  response: 7E8056211BD0DC3
+- expected_values:
     VOLKSWAGEN_OIL_LEVEL_WARN: 1.4176
-- response: 7E8056211BD0DEF
-  expected_values:
+  response: 7E8056211BD0DD8
+- expected_values:
     VOLKSWAGEN_OIL_LEVEL_WARN: 1.4268
-- response: 7E8056211BD0DF5
-  expected_values:
+  response: 7E8056211BD0DEF
+- expected_values:
     VOLKSWAGEN_OIL_LEVEL_WARN: 1.4292
-- response: 7E8056211BD0E0C
-  expected_values:
+  response: 7E8056211BD0DF5
+- expected_values:
     VOLKSWAGEN_OIL_LEVEL_WARN: 1.4384
-- response: 7E8056211BD0E1C
-  expected_values:
+  response: 7E8056211BD0E0C
+- expected_values:
     VOLKSWAGEN_OIL_LEVEL_WARN: 1.4448
-- response: 7E8056211BD0E22
-  expected_values:
+  response: 7E8056211BD0E1C
+- expected_values:
     VOLKSWAGEN_OIL_LEVEL_WARN: 1.4472
-- response: 7E8056211BD0E31
-  expected_values:
+  response: 7E8056211BD0E22
+- expected_values:
     VOLKSWAGEN_OIL_LEVEL_WARN: 1.4532
+  response: 7E8056211BD0E31
