--- a/tests/test_cases/2023/commands/7E0.7E8.22F40D.yaml
+++ b/tests/test_cases/2023/commands/7E0.7E8.22F40D.yaml
@@ -1,5 +1,5 @@
 command_id: 7E0.7E8.22F40D
 test_cases:
-- response: 7E80462F40D00
-  expected_values:
+- expected_values:
     VOLKSWAGEN_VSS: 0
+  response: 7E80462F40D00
