--- a/tests/test_cases/2023/commands/7E1.223841.yaml
+++ b/tests/test_cases/2023/commands/7E1.223841.yaml
@@ -1,5 +1,5 @@
 command_id: 7E1.223841
 test_cases:
-- response: 7E90762384199F60100
-  expected_values:
+- expected_values:
     VOLKSWAGEN_ODO_TCM_1: 128665
+  response: 7E90762384199F60100
